# lucius

./: .gitignore  README.md  align.py  embed_slideshow.py  export.py  export_summary.py  illustrate.py  pyproject.toml  read_transcript.py  summarize.py  transcribe.py
lucius/: __init__.py  embedder.py  images.py  segments.py  sentence.py  slideshow.py  summary.py  transcript.py  transcription.py  webpage.py
