[tool.poetry]
name = "lucius"
version = "0.1.0"
description = "Study assistant powered by open ML models."
authors = ["malyvsen <5940672+malyvsen@users.noreply.github.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
faster-whisper = "^0.3.0"
tqdm = "^4.65.0"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
